Finish scrapping of details

--- a/MyMovies.Entities/MyMovies.Entities.csproj
+++ b/MyMovies.Entities/MyMovies.Entities.csproj
@@ -91,6 +91,10 @@
     <Compile Include="Migrations\201609041135516_AddedMoreProp.Designer.cs">
       <DependentUpon>201609041135516_AddedMoreProp.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201609050044067_AddedTitleDetails.cs" />
+    <Compile Include="Migrations\201609050044067_AddedTitleDetails.Designer.cs">
+      <DependentUpon>201609050044067_AddedTitleDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Movie.cs" />
     <Compile Include="MovieContext.cs" />
@@ -134,6 +138,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201609041135516_AddedMoreProp.resx">
       <DependentUpon>201609041135516_AddedMoreProp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609050044067_AddedTitleDetails.resx">
+      <DependentUpon>201609050044067_AddedTitleDetails.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
