--- a/MyMovies.Web/Web.config
+++ b/MyMovies.Web/Web.config
@@ -9,7 +9,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="MovieConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=CAWIDESKTOP-PC\CAWISQL;Initial Catalog=Movies;Integrated Security=True" />
+    <add name="MovieConnectionString" providerName="System.Data.SqlClient" connectionString="server=NGSCLTL7C2;uid=sa;pwd=P@ssw0rd;database=MyMovies" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -80,7 +80,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
