--- a/MyMovies.Test/App.config
+++ b/MyMovies.Test/App.config
@@ -8,7 +8,7 @@
     <add key="ImdbBaseUrl" value="http://www.imdb.com/title/" />    
   </appSettings>
   <connectionStrings>
-    <add name="MovieConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=CAWIDESKTOP-PC\CAWISQL;Initial Catalog=Movies;Integrated Security=True" />
+    <add name="MovieConnectionString" providerName="System.Data.SqlClient" connectionString="server=NGSCLTL7C2;uid=sa;pwd=P@ssw0rd;database=MyMovies" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -29,6 +29,10 @@
       <dependentAssembly>
         <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
