--- a/MyMovies.Web/packages.config
+++ b/MyMovies.Web/packages.config
@@ -35,6 +35,7 @@
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net45" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.3.0" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
+  <package id="valueinjecter" version="3.1.1.3" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.6" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
