--- a/MyMovies.Web/packages.config
+++ b/MyMovies.Web/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="bootstrap" version="3.3.7" targetFramework="net45" />
   <package id="CacheManager.Core" version="0.9.0" targetFramework="net45" />
   <package id="CacheManager.SystemRuntimeCaching" version="0.9.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="FontAwesome" version="4.6.3" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net45" />
-  <package id="jQuery" version="1.8.2" targetFramework="net45" />
+  <package id="jQuery" version="1.9.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net45" />
   <package id="knockoutjs" version="2.2.0" targetFramework="net45" />
