--- a/MyMovies.Entities/MyMovies.Entities.csproj
+++ b/MyMovies.Entities/MyMovies.Entities.csproj
@@ -113,6 +113,11 @@
     <Compile Include="MovieXPath.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Review.cs" />
+    <Compile Include="Users\Role.cs" />
+    <Compile Include="Users\User.cs" />
+    <Compile Include="Users\UserClaim.cs" />
+    <Compile Include="Users\UserLogin.cs" />
+    <Compile Include="Users\UserRole.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
