--- a/MyMovies.Web/packages.config
+++ b/MyMovies.Web/packages.config
@@ -10,6 +10,9 @@
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net45" />
   <package id="knockoutjs" version="2.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Providers.Core" version="1.2" targetFramework="net45" />
@@ -29,6 +32,11 @@
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
@@ -36,6 +44,7 @@
   <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net45" />
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net45" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.3.0" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="valueinjecter" version="3.1.1.3" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.6" targetFramework="net45" />
