--- a/MyMovies.Test/MyMovies.Test.csproj
+++ b/MyMovies.Test/MyMovies.Test.csproj
@@ -47,10 +47,15 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="HtmlAgilityPack, Version=1.4.9.5, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\HtmlAgilityPack.1.4.9.5\lib\Net45\HtmlAgilityPack.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Runtime.Caching" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -65,10 +70,15 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="HtmlDocumentTest.cs" />
     <Compile Include="MovieApiTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MyMovies.Common\MyMovies.Common.csproj">
+      <Project>{d918aee2-55f3-4426-a6bb-90e3776aeb74}</Project>
+      <Name>MyMovies.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MyMovies.Entities\MyMovies.Entities.csproj">
       <Project>{e2400577-530e-49cf-abbc-10ee7d5993d0}</Project>
       <Name>MyMovies.Entities</Name>
