--- a/MyMovies.Entities/MyMovies.Entities.csproj
+++ b/MyMovies.Entities/MyMovies.Entities.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\Enums.cs" />
     <Compile Include="Migrations\201609040216348_InitialMigration.cs" />
     <Compile Include="Migrations\201609040216348_InitialMigration.Designer.cs">
       <DependentUpon>201609040216348_InitialMigration.cs</DependentUpon>
@@ -107,6 +108,10 @@
     <Compile Include="Migrations\201609060910251_addmoreproperties.Designer.cs">
       <DependentUpon>201609060910251_addmoreproperties.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612311237169_FixAspNetUsers.cs" />
+    <Compile Include="Migrations\201612311237169_FixAspNetUsers.Designer.cs">
+      <DependentUpon>201612311237169_FixAspNetUsers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Movie.cs" />
     <Compile Include="MovieContext.cs" />
@@ -115,8 +120,6 @@
     <Compile Include="Review.cs" />
     <Compile Include="Users\Role.cs" />
     <Compile Include="Users\User.cs" />
-    <Compile Include="Users\UserClaim.cs" />
-    <Compile Include="Users\UserLogin.cs" />
     <Compile Include="Users\UserRole.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -168,6 +171,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201609060910251_addmoreproperties.resx">
       <DependentUpon>201609060910251_addmoreproperties.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612311237169_FixAspNetUsers.resx">
+      <DependentUpon>201612311237169_FixAspNetUsers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
