--- a/MyMovies.Web/MyMovies.Web.csproj
+++ b/MyMovies.Web/MyMovies.Web.csproj
@@ -229,6 +229,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="BusinessLogic\Pagination.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -237,8 +238,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612311224391_InitialIdentities.cs" />
+    <Compile Include="Migrations\201612311224391_InitialIdentities.Designer.cs">
+      <DependentUpon>201612311224391_InitialIdentities.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\PaginationModel.cs" />
     <Compile Include="MyMovieResource.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -441,6 +448,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Migrations\201612311224391_InitialIdentities.resx">
+      <DependentUpon>201612311224391_InitialIdentities.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MyMovieResource.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>MyMovieResource.Designer.cs</LastGenOutput>
