Scrapping Related Movies

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ MyMovies.Test/obj/
 MyMovies.Repository/bin/
 MyMovies.Repository/obj/
 MyMovies.Entities/bin/
+MyMovies.MovieInfoDownloader/bin/
+MyMovies.MovieInfoDownloader/obj/
