--- a/MyMovies.Web/MyMovies.Web.csproj
+++ b/MyMovies.Web/MyMovies.Web.csproj
@@ -421,6 +421,7 @@
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Shared\_WatchList.cshtml" />
     <Content Include="Views\Movie\Index.cshtml" />
+    <Content Include="Views\Movie\_Movie.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
