--- a/MyMovies.Web/MyMovies.Web.csproj
+++ b/MyMovies.Web/MyMovies.Web.csproj
@@ -422,6 +422,7 @@
     <Content Include="Views\Shared\_WatchList.cshtml" />
     <Content Include="Views\Movie\Index.cshtml" />
     <Content Include="Views\Movie\_Movie.cshtml" />
+    <Content Include="Views\Shared\_Menu.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
