--- a/MyMovies.Entities/MyMovies.Entities.csproj
+++ b/MyMovies.Entities/MyMovies.Entities.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Movie.cs" />
     <Compile Include="MovieContext.cs" />
     <Compile Include="MovieXPath.cs" />
+    <Compile Include="PageHeaderBackGround.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Review.cs" />
     <Compile Include="Users\Role.cs" />
