--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ MyMovies.Repository/obj/
 MyMovies.Entities/bin/
 MyMovies.MovieInfoDownloader/bin/
 MyMovies.MovieInfoDownloader/obj/
+MyMovies.Web/Resources/images/
