--- a/MyMovies.Repository/MyMovies.Repository.csproj
+++ b/MyMovies.Repository/MyMovies.Repository.csproj
@@ -55,10 +55,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Implementations\BannerRepository.cs" />
+    <Compile Include="Implementations\PlayListRepository.cs" />
+    <Compile Include="Implementations\WatchListRepository.cs" />
     <Compile Include="Implementations\MovieXPathRepository.cs" />
     <Compile Include="Implementations\MovieRepository.cs" />
     <Compile Include="Implementations\UserRepository.cs" />
     <Compile Include="Implementations\UserRoleRepository.cs" />
+    <Compile Include="Interfaces\IPlayListRepository.cs" />
+    <Compile Include="Interfaces\IWatchListRepository.cs" />
     <Compile Include="Interfaces\IBannerRepository.cs" />
     <Compile Include="Interfaces\IMovieXPathRepository.cs" />
     <Compile Include="Interfaces\IMovieRepository.cs" />
