Add Edit Banner Initial Commit

--- a/MyMovies.Entities/MyMovies.Entities.csproj
+++ b/MyMovies.Entities/MyMovies.Entities.csproj
@@ -117,6 +117,10 @@
     <Compile Include="Migrations\201703200602589_Banner.Designer.cs">
       <DependentUpon>201703200602589_Banner.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704100226185_FavoritesAndPlaylist.cs" />
+    <Compile Include="Migrations\201704100226185_FavoritesAndPlaylist.Designer.cs">
+      <DependentUpon>201704100226185_FavoritesAndPlaylist.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Movie.cs" />
     <Compile Include="MovieContext.cs" />
@@ -186,6 +190,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703200602589_Banner.resx">
       <DependentUpon>201703200602589_Banner.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704100226185_FavoritesAndPlaylist.resx">
+      <DependentUpon>201704100226185_FavoritesAndPlaylist.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
