--- a/MyMovies.Test/App.config
+++ b/MyMovies.Test/App.config
@@ -8,7 +8,7 @@
     <add key="ImdbBaseUrl" value="http://www.imdb.com/title/" />    
   </appSettings>
   <connectionStrings>
-    <add name="MovieConnectionString" providerName="System.Data.SqlClient" connectionString="server=NGSCLTL7C2;uid=sa;pwd=P@ssw0rd;database=MyMovies" />
+    <add name="MovieConnectionString" providerName="System.Data.SqlClient" connectionString="server=CAWI;uid=sa;pwd=1234567890a!;database=MyMovies" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
