--- a/MyMovies.Test/packages.config
+++ b/MyMovies.Test/packages.config
@@ -3,4 +3,5 @@
   <package id="CacheManager.Core" version="0.9.0" targetFramework="net45" />
   <package id="CacheManager.SystemRuntimeCaching" version="0.9.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="valueinjecter" version="3.1.1.3" targetFramework="net45" />
 </packages>
