--- a/MyMovies.Web/MyMovies.Web.csproj
+++ b/MyMovies.Web/MyMovies.Web.csproj
@@ -416,6 +416,7 @@
     <Content Include="Views\Shared\_Pagination.cshtml" />
     <Content Include="Views\Admin\Banner.cshtml" />
     <Content Include="Views\Admin\AddEditBanner.cshtml" />
+    <Content Include="Views\Admin\_Buttons.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
