--Search imdb by text --load hd image

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ MyMovies.Entities/bin/
 MyMovies.MovieInfoDownloader/bin/
 MyMovies.MovieInfoDownloader/obj/
 MyMovies.Web/Resources/images/
+MyMovies.Web/Resources/banners/
