--- a/MyMovies.Web/Web.config
+++ b/MyMovies.Web/Web.config
@@ -9,7 +9,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="MovieConnectionString" providerName="System.Data.SqlClient" connectionString="server=NGSCLTL7C2;uid=sa;pwd=P@ssw0rd;database=MyMovies" />
+    <add name="MovieConnectionString" providerName="System.Data.SqlClient" connectionString="server=CAWI;uid=sa;pwd=1234567890a!;database=MyMovies" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -17,11 +17,12 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="ImdbBaseUrl" value="http://www.imdb.com/title/" />
+    <add key="ImdbBaseUrl" value="http://www.imdb.com/" />
+    <add key="ImdbSearchTitleFormat" value="http://www.imdb.com/find?q={0}&amp;s=tt" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" requestValidationMode="2.0" />
     <authentication mode="None" />
     <pages>
       <namespaces>
@@ -101,6 +102,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
