--- a/MyMovies.Test/App.config
+++ b/MyMovies.Test/App.config
@@ -5,7 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
-    <add key="ImdbBaseUrl" value="http://www.imdb.com/title/" />    
+    <add key="ImdbBaseUrl" value="http://www.imdb.com/title/" />
+    <add key="ImdbSearchTitleFormat" value="http://www.imdb.com/find?q={0}&amp;s=tt" />
   </appSettings>
   <connectionStrings>
     <add name="MovieConnectionString" providerName="System.Data.SqlClient" connectionString="server=CAWI;uid=sa;pwd=1234567890a!;database=MyMovies" />
@@ -41,6 +42,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
