Initial commit for displaying watchlist

--- a/MyMovies.Web/MyMovies.Web.csproj
+++ b/MyMovies.Web/MyMovies.Web.csproj
@@ -394,6 +394,7 @@
     <Content Include="Scripts\waypoints-sticky.min.js" />
     <Content Include="Scripts\waypoints.min.js" />
     <Content Include="source.txt" />
+    <Content Include="Templates\directives\WathcList.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
