--- a/MyMovies.MovieInfoDownloader/App.config
+++ b/MyMovies.MovieInfoDownloader/App.config
@@ -4,14 +4,14 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <appSettings>
-    <add key="MovieInfoDownloadedPath" value="C:/"/>
+    <add key="MovieInfoDownloadedPath" value="C:/Cawi/DEV/MyMovies/MyMovies.Test/bin/Debug/Documents"/>
     <add key="MovieRemarksDownloadedPath" value="C:/Cawi/MovieRemarks"/>
-    <add key="ImagesPath" value="C:/Cawi"/>
-    <add key="ImagesToUpdateSize" value="50"/> <!--This is in kbps-->
+    <add key="ImagesPath" value="C:/Cawi/DEV/MyMovies/MyMovies.Web/Resources/images"/>
+    <add key="ImagesToUpdateSize" value="39"/> <!--This is in kbps-->
     <add key="DownloadMovieInfo" value="true"/>
     <add key="DownloadMovieRemarks" value="false"/>
   </appSettings>
   <connectionStrings>
-    <add name="MovieConnectionString" providerName="System.Data.SqlClient" connectionString="server=NGSCLTL7C2;uid=sa;pwd=P@ssw0rd;database=MyMovies" />
+    <add name="MovieConnectionString" providerName="System.Data.SqlClient" connectionString="server=CAWI;uid=sa;pwd=1234567890a!;database=MyMovies" />
   </connectionStrings>
 </configuration>
