--- a/MyMovies.MovieInfoDownloader/MyMovies.MovieInfoDownloader.csproj
+++ b/MyMovies.MovieInfoDownloader/MyMovies.MovieInfoDownloader.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessLogics\HDPosterLinkUpdater.cs" />
     <Compile Include="BusinessLogics\ImageDownloader.cs" />
     <Compile Include="BusinessLogics\MovieBase.cs" />
     <Compile Include="BusinessLogics\MovieDownloader.cs" />
